--- a/WorkoutClub/WorkoutClub/Base.lproj/Main.storyboard
+++ b/WorkoutClub/WorkoutClub/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RCP-SG-guU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="u6o-7F-fNZ">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -158,6 +158,57 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s6c-Vh-J1F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="112.5" y="801.76056338028172"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ipf-Fd-BOJ">
+            <objects>
+                <viewController id="LYh-Gc-8g2" customClass="ViewController" customModule="WorkoutClub" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="laz-3x-nhY"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qaf-Iv-aQy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Fpm-2Y-sCQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="clo-tN-bji" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="364" y="1517"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="RgT-A7-hY5">
+            <objects>
+                <viewController id="u6o-7F-fNZ" customClass="DRHTableViewController" customModule="WorkoutClub" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="on5-AI-Vpf"/>
+                        <viewControllerLayoutGuide type="bottom" id="TFc-kL-F8w"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Qh5-9l-ht2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sHz-4x-y3v">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sHz-4x-y3v" firstAttribute="top" secondItem="on5-AI-Vpf" secondAttribute="bottom" id="0HU-ou-1Xd"/>
+                            <constraint firstItem="sHz-4x-y3v" firstAttribute="leading" secondItem="Qh5-9l-ht2" secondAttribute="leading" id="JER-SI-dA4"/>
+                            <constraint firstItem="TFc-kL-F8w" firstAttribute="top" secondItem="sHz-4x-y3v" secondAttribute="bottom" id="eU4-XM-jzR"/>
+                            <constraint firstAttribute="trailing" secondItem="sHz-4x-y3v" secondAttribute="trailing" id="qpJ-mP-BXW"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="sHz-4x-y3v" id="eFZ-5t-jfP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RDj-YK-d3Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="364" y="2201"/>
         </scene>
     </scenes>
 </document>
